--- a/index.html
+++ b/index.html
@@ -5,8 +5,176 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <section>
+        <h1>Техномарт</h1>
+        <ul>
+          <li><a href="">Закладки</a></li>
+          <li><a href="">Корзина</a></li>
+          <li><a href="">Оформить заказ</a></li>
+          </ul>
+        </section>
+        <nav>
+          <p>Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
+          <a href="tel:88125550505">+7(812)555-05-05</a>
+          <address>г. Санкт-петербург, ул. Б. Конюшенная, д19/8</address>
+          <button type="button">Войти</button>
+          <button type="button">Регистрация</button>
+        </nav>
+        <nav>
+          <ul>
+            <li><a href="">Главная</a></li>
+            <li><a href="">Компания</a></li>
+            <li><a href="Catalog.html">Каталог</a></li>
+            <li><a href="">Новости</a></li>
+            <li><a href="">Спецпредложения</a></li>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+        </nav>  
+    </header>
+    <main>
+      <h2>Интернет магазин Техномарт</h2>   <!--Будет скрытый заголовок-->
+      <section>
+        <h2>Категори товаров</h2>   <!--Будет скрытый заголовок-->
+        <ul>
+          <li>Материалы<br><button type="button">На любой вкус</button></li>
+          <li>Инструмент<br><button type="button">На все случаи</button></li>
+          <li>Техника<br><button type="button">Для стройки</button></li>
+          <li>Скидки 50%<br><button type="button">На 350 товаров</button></li>
+          <li>Доставка<br><button type="button">Бесплатно</button></li>
+        </ul>
+        <div>
+          <img src="https://via.placeholder.com/620x266" alt="Перфораторы"> <!--Слайдер-->
+        </div>
+      </section>
+      <section>
+        <h2>Популярные товары</h2>
+        <a href="">Все популярные товары</a>
+        <ul>
+          <li>
+            <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 9000">
+            <p>Перфоратор BOSCH <br>BFG 9000<br><del>32500 Р.</del></p>
+            <button type="button">25500</button>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 3000">
+            <p>Перфоратор BOSCH <br>BFG 3000<br><del>22500 Р.</del></p>
+            <button type="button">15500</button>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 6000">
+            <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
+            <button type="button">25500</button>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 9000">
+            <p>Перфоратор BOSCH <br>BFG 2000</p>
+            <button type="button">12500</button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Популярные производители:</h2>
+        <a href="">Все производители</a>
+        <ul>
+          <li>
+            <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Сервисы</h2>
+        <p>Хороший интернет магазин отличаеться от плохого нне только ценами!<br>Мы стараемся изо всех сил, что бы сделать ваши покупки приятными.</p>
+        <div>
+          <h3>Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершено бесплатно! <br>Ведь мы не плохо заработаем, <br>поднимая его на ваш этаж</p>
+          <img src="https://via.placeholder.com/468x261" alt="Логотип партнера">
+        </div>
+        <div>
+          <h3>Гарантия</h3>
+          <p>Если купленый у нас товар поломается или заскрипит, <br>а также в случае пожара, спровоцированного его<br>возгаранием, вы всегда можете уверены в нашей<br>
+            гарантии. Мы обменяем сгоревший товар на новый.<br>Дом уж востановите как-нибудь сами.
+          </p>
+          <img src="https://via.placeholder.com/468x261" alt="Логотип партнера">
+        </div>
+        <div>
+          <h3>Кредит</h3>
+          <p>Залезть в долговую яму стало проще!<br> Кредитные консультанты придут вам на помощь</p>
+          <button type="button">Отправить заявку</button>
+          <br><img src="https://via.placeholder.com/468x261" alt="Логотип партнера">
+        </div>
+      </section>
+      <section>
+        <h2>Компания «Техномарт»</h2>
+        <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для <br>ремонтаи строительства не оставит равнодушными любителей сэкономить <br>на гастарбайтерах</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими тарнспортными компаниями:</p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+          <li><a href="">Подробнее о компании</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
+        <img src="https://via.placeholder.com/300x158" alt="Карта как нас найти">
+        <p><button type="button">Заблудились? Напишите нам!</button></p>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>Техномарт</h2>
+          <ul>
+            <li><a href="">Компания</a></li>
+            <li><a href="">Новости</a></li>
+            <li><a href="">Каталог</a></li>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+          <ul>
+            <li><address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>br<a href="tel:88125550555">+7 (812) 555-05-55</a></li>
+            <li><a href="">Материалы</a></li>
+            <li><a href="">Техника</a></li>
+            <li><a href="">Инструмент</a></li>
+            <li><a href="">Спецпредложения</a></li>
+          </ul>
+      </section>
+      <section>
+        <h2>Связь с нами</h2>  <!--Будет переименновано-->
+        <p>© 2010-2019 Компания «Техномарт» <br>Все права защищены</p>
+        <ul>
+          <li><a href="">Вконтакте</a></li>
+          <li><a href="">Фейсбук</a></li>
+          <li><a href="">Инстаграмм</a></li>
+        </ul>
+        <ul>
+          <li>Обратная связь:<br><a href="">mail@htmlacademy.ru</a></li>
+          <li>Разработано - <br><a href="">htmlacademy.ru</a></li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
