--- a/index.html
+++ b/index.html
@@ -6,45 +6,21 @@
   </head>
   <body>
     <header>
-<<<<<<< HEAD
-      <section>
-        <h1>Техномарт</h1>
+      <nav>
         <ul>
           <li><a href="">Закладки</a></li>
           <li><a href="">Корзина</a></li>
           <li><a href="">Оформить заказ</a></li>
           </ul>
-        </section>
-        <nav>
+      </nav>
+        <div>
           <p>Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
           <a href="tel:88125550505">+7(812)555-05-05</a>
           <address>г. Санкт-петербург, ул. Б. Конюшенная, д19/8</address>
           <button type="button">Войти</button>
           <button type="button">Регистрация</button>
-        </nav>
+        </div>
         <nav>
-=======
-      <nav>
-        <section>
-          <a>
-           <img src="https://via.placeholder.com/220x47" alt="Логотип интернет-магазина Техномарт">
-          </a>
-          <ul>
-            <li><a href="">Закладки</a></li>
-            <li><a href="">Корзина</a></li>
-            <li><a href="">Оформить заказ</a></li>
-          </ul>
-        </section>
-        <section>
-          <ul>
-          <li>Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</li>
-          <li>+7(812)555-05-05 <br>г. Санкт-петербург, ул. Б. Конюшенная, д19/8</li>
-          <li><a href="">Войти</a></li>
-          <li><a href="">Регистрация</a></li>
-          </ul>
-        </section>
-        <section>
->>>>>>> 3885d7954edc74e8f2077aa1c16b2f17cd72c02a
           <ul>
             <li><a href="">Главная</a></li>
             <li><a href="">Компания</a></li>
@@ -54,44 +30,28 @@
             <li><a href="">Доставка</a></li>
             <li><a href="">Контакты</a></li>
           </ul>
-<<<<<<< HEAD
         </nav>  
     </header>
     <main>
-      <h2>Интернет магазин Техномарт</h2>   <!--Будет скрытый заголовок-->
+      <h1>Интернет магазин Техномарт</h1>   <!--Будет скрытый заголовок-->
       <section>
         <h2>Категори товаров</h2>   <!--Будет скрытый заголовок-->
-=======
-        </section>
-      </nav>
-    </header>
-    <main>
-      <h1>Интернет магазин Техномарт</h1>
-      <section>
-        <h2>Категори товаров</h2>
->>>>>>> 3885d7954edc74e8f2077aa1c16b2f17cd72c02a
         <ul>
           <li>Материалы<br><button type="button">На любой вкус</button></li>
           <li>Инструмент<br><button type="button">На все случаи</button></li>
           <li>Техника<br><button type="button">Для стройки</button></li>
           <li>Скидки 50%<br><button type="button">На 350 товаров</button></li>
           <li>Доставка<br><button type="button">Бесплатно</button></li>
-<<<<<<< HEAD
         </ul>
         <div>
           <img src="https://via.placeholder.com/620x266" alt="Перфораторы"> <!--Слайдер-->
         </div>
-=======
-          <li>Перфораторы <br>Настоящие мужские игрушки<br><button type="button">Открыть каталог</button></li>
-        </ul>
->>>>>>> 3885d7954edc74e8f2077aa1c16b2f17cd72c02a
       </section>
       <section>
         <h2>Популярные товары</h2>
         <a href="">Все популярные товары</a>
         <ul>
           <li>
-<<<<<<< HEAD
             <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 9000">
             <p>Перфоратор BOSCH <br>BFG 9000<br><del>32500 Р.</del></p>
             <button type="button">25500</button>
@@ -110,34 +70,6 @@
             <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 9000">
             <p>Перфоратор BOSCH <br>BFG 2000</p>
             <button type="button">12500</button>
-=======
-            <p>
-              <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 9000">
-            </p>
-            <p>Перфоратор BOSCH <br>BFG 9000<br><del>32500 Р.</del></p>
-            <p><button type="button">25500</button></p>
-          </li>
-          <li>
-            <p>
-              <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 3000">
-            </p>
-            <p>Перфоратор BOSCH <br>BFG 3000<br><del>22500 Р.</del></p>
-            <p><button type="button">15500</button></p>
-          </li>
-          <li>
-            <p>
-              <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 6000">
-            </p>
-            <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
-            <p><button type="button">25500</button></p>
-          </li>
-          <li>
-            <p>
-              <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 9000">
-            </p>
-            <p>Перфоратор BOSCH <br>BFG 2000</p>
-            <p><button type="button">12500</button></p>
->>>>>>> 3885d7954edc74e8f2077aa1c16b2f17cd72c02a
           </li>
         </ul>
       </section>
@@ -145,7 +77,6 @@
         <h2>Популярные производители:</h2>
         <a href="">Все производители</a>
         <ul>
-<<<<<<< HEAD
           <li>
             <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
           </li>
@@ -170,15 +101,11 @@
           <li>
             <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
           </li>
-=======
-          <!--Блок с логтипами производителей-->
->>>>>>> 3885d7954edc74e8f2077aa1c16b2f17cd72c02a
         </ul>
       </section>
       <section>
         <h2>Сервисы</h2>
         <p>Хороший интернет магазин отличаеться от плохого нне только ценами!<br>Мы стараемся изо всех сил, что бы сделать ваши покупки приятными.</p>
-<<<<<<< HEAD
         <div>
           <h3>Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершено бесплатно! <br>Ведь мы не плохо заработаем, <br>поднимая его на ваш этаж</p>
@@ -197,17 +124,6 @@
           <button type="button">Отправить заявку</button>
           <br><img src="https://via.placeholder.com/468x261" alt="Логотип партнера">
         </div>
-=======
-        <ul>
-          <li>Доставка</li>
-          <li>Гарантия</li>
-          <li>Кредит</li>
-        </ul>
-        <h3>Доставка</h3>
-        <p>Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершенно бесплатно!
-          <br>Ведь мы не плохо заработаем, <br>поднимая его на ваш этаж</p>
-        </p>
->>>>>>> 3885d7954edc74e8f2077aa1c16b2f17cd72c02a
       </section>
       <section>
         <h2>Компания «Техномарт»</h2>
@@ -217,7 +133,6 @@
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
-<<<<<<< HEAD
           <li><a href="">Подробнее о компании</a></li>
         </ul>
       </section>
@@ -231,21 +146,6 @@
     <footer>
       <section>
         <h2>Техномарт</h2>
-=======
-          <li><button type="button">Подробнее о компании</button></li>
-          <section>
-            <h2>Контакты</h2>
-            <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
-            <p><img src="https://via.placeholder.com/300x158"></p>
-            <p><button type="button">Заблудились? Напишите нам!</button></p>
-          </section>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <section>
-        <img src="https://via.placeholder.com/220x47" alt="Логотип интернет-магазина Техномарт">
->>>>>>> 3885d7954edc74e8f2077aa1c16b2f17cd72c02a
           <ul>
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
@@ -254,7 +154,6 @@
             <li><a href="">Контакты</a></li>
           </ul>
           <ul>
-<<<<<<< HEAD
             <li><address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>br<a href="tel:88125550555">+7 (812) 555-05-55</a></li>
             <li><a href="">Материалы</a></li>
             <li><a href="">Техника</a></li>
@@ -271,21 +170,6 @@
           <li><a href="">Инстаграмм</a></li>
         </ul>
         <ul>
-=======
-            <li>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>+7 (812) 555-05-55</li>
-            <li><a href="">Материалы</a></li>
-            <li><a href="">Техника</a></li>
-            <li><a href="">Инструмент</a></li>
-            <li><a href=""></a>Спецпредложения</li>
-          </ul>
-      </section>
-      <section>
-        <ul>
-          <li>© 2010-2019 Компания «Техномарт» <br>Все права защищены</li>
-          <li><a href="">Вконтакте</a></li>
-          <li><a href="">Фейсбук</a></li>
-          <li><a href="">Инстаграмм</a></li>
->>>>>>> 3885d7954edc74e8f2077aa1c16b2f17cd72c02a
           <li>Обратная связь:<br><a href="">mail@htmlacademy.ru</a></li>
           <li>Разработано - <br><a href="">htmlacademy.ru</a></li>
         </ul>
