--- a/4/index.html
+++ b/4/index.html
@@ -11,7 +11,7 @@
     <header class="page-header">
       <nav class="main-order">
         <a class="header-logo" href="index.html">Техномарт</a>
-        <ul class="order-navigation">
+        <ul class="order-navigation no-indentation">
           <li><a href="">Закладки</a></li>
           <li><a href="">Корзина</a></li>
           <li><a href="">Оформить заказ</a></li>
@@ -25,7 +25,7 @@
           <button class="button" type="button">Регистрация</button>
         </div>
         <nav class="main-navigation">
-          <ul class="site-navigation">
+          <ul class="site-navigation no-bulites">
             <li><a href="">Главная</a></li>
             <li><a href="">Компания</a></li>
             <li><a href="Catalog.html">Каталог</a></li>
@@ -40,7 +40,7 @@
       <h1>Интернет магазин Техномарт</h1>   <!--Будет скрытый заголовок-->
       <section class="categories"> 
         <h2>Категори товаров</h2>   <!--Будет скрытый заголовок-->
-        <ul class="categories-list">
+        <ul class="categories-list no-bulites">
           <li class="categories-item">Материалы<br><button type="button">На любой вкус</button></li>
           <li class="categories-item">Инструмент<br><button type="button">На все случаи</button></li>
           <li class="categories-item">Техника<br><button type="button">Для стройки</button></li>
@@ -52,9 +52,11 @@
         </div>
       </section>
       <section class="products">
+        <div class="products-block">
         <h2>Популярные товары</h2>
         <a href="">Все популярные товары</a>
-        <ul class="products-list">
+        </div>
+        <ul class="products-list no-bulites">
           <li class="products-item">
             <img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 9000">
             <p>Перфоратор BOSCH <br>BFG 9000<br><del>32500 Р.</del></p>
@@ -78,9 +80,11 @@
         </ul>
       </section>
       <section class="manufactures">
-        <h2>Популярные производители:</h2>
-        <a href="">Все производители</a>
-        <ul class="manufactures-list">
+        <div class="manufactures-block">
+          <h2>Популярные производители:</h2>
+          <a href="">Все производители</a>
+        </div>
+        <ul class="manufactures-list no-bulites">
           <li>
             <img src="https://via.placeholder.com/220x145" alt="Логотип партнера">
           </li>
@@ -133,7 +137,7 @@
         <h2>Компания «Техномарт»</h2>
         <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для <br>ремонтаи строительства не оставит равнодушными любителей сэкономить <br>на гастарбайтерах</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими тарнспортными компаниями:</p>
-        <ul class="details-list">
+        <ul class="details-list no-bulites">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
@@ -150,14 +154,14 @@
     <footer class="page-footer">
       <section class="footer-navigation" >
         <h2>Техномарт</h2>
-          <ul class="footer-nav">
+          <ul class="footer-nav no-bulites">
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
             <li><a href="">Каталог</a></li>
             <li><a href="">Доставка</a></li>
             <li><a href="">Контакты</a></li>
           </ul>
-          <ul class="footer-cat">
+          <ul class="footer-cat no-bulites">
             <li><address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address><a href="tel:88125550555">+7 (812) 555-05-55</a></li>
             <li><a href="">Материалы</a></li>
             <li><a href="">Техника</a></li>
@@ -165,15 +169,15 @@
             <li><a href="">Спецпредложения</a></li>
           </ul>
       </section>
-      <section class="footer-contacts">
+      <section class="footer-contacts no-bulites">
         <h2>Связь с нами</h2>  <!--Будет переименновано-->
         <p>© 2010-2019 Компания «Техномарт» <br>Все права защищены</p>
-        <ul class="footer-social">
+        <ul class="footer-social no-bulites">
           <li><a href="">Вконтакте</a></li>
           <li><a href="">Фейсбук</a></li>
           <li><a href="">Инстаграмм</a></li>
         </ul>
-        <ul class="footer-copyright">
+        <ul class="footer-copyright no-bulites">
           <li>Обратная связь:<br><a href="">mail@htmlacademy.ru</a></li>
           <li>Разработано - <br><a href="">htmlacademy.ru</a></li>
         </ul>
