--- a/6/index.html
+++ b/6/index.html
@@ -11,8 +11,7 @@
     <header class="page-header">
       <nav class="main-order">
         <a class="header-logo" href="index.html">
-          <object type="image/svg+xml" data="img/logo-2.svg"></object>
-          <object class="logo-text" type="image/svg+xml" data="img/logo-1.svg" x="300"></object>
+          <img src="img/logotip.png" alt="Логотип компании «Техномарт»">
         </a>
         <ul class="order-navigation no-indentation">
           <li><a href="">Закладки</a></li>
@@ -120,20 +119,20 @@
         <div class="service-slide">
           <h3>Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершено бесплатно! <br>Ведь мы не плохо заработаем, <br>поднимая его на ваш этаж</p>
-          <object type="image/svg+xml" data="img/Dostavka.svg" alt="Доставка"></object>
+          <img src="img/dostavka.png" alt="Доставка">
         </div>
         <div class="service-slide">
           <h3>Гарантия</h3>
           <p>Если купленый у нас товар поломается или заскрипит, <br>а также в случае пожара, спровоцированного его<br>возгаранием, вы всегда можете уверены в нашей<br>
             гарантии. Мы обменяем сгоревший товар на новый.<br>Дом уж востановите как-нибудь сами.
           </p>
-          <object type="image/svg+xml" data="img/Garant.svg" alt="Гарантии"></object>
+          <img src="img/garant.png" alt="Гарантия"></object>
         </div>
         <div class="service-slide">
           <h3>Кредит</h3>
           <p>Залезть в долговую яму стало проще!<br> Кредитные консультанты придут вам на помощь</p>
           <button type="button">Отправить заявку</button>
-          <object type="image/svg+xml" data="img/Kredit.svg" alt="Кредит"></object>
+          <img src="img/Kredit.png" alt="Кредит"></object>
         </div>
       </section>
       <section class="details">
@@ -156,7 +155,7 @@
     </main>
     <footer class="page-footer">
       <section class="footer-navigation" >
-        <img src="img/logo-foot.jpg" alt="Логотип сайта">
+        <img src="img/logotip.png" alt="Логотип компании «Техномарт»">
         <h2>Техномарт</h2>
           <ul class="footer-nav no-bulites">
             <li><a href="">Компания</a></li>
@@ -177,15 +176,24 @@
         <h2>Связь с нами</h2>  <!--Будет переименновано-->
         <p>© 2010-2019 Компания «Техномарт» <br>Все права защищены</p>
         <ul class="footer-social no-bulites">
-          <li class="social"><svg width="26" height="15" viewBox="0 0 26 15" transform="translate(10, 15)" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <li class="social">
+            <svg width="26" height="15" viewBox="0 0 26 15" transform="translate(10, 15)" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M15.5403 11.7281C16.4609 11.4384 17.6396 13.6406 18.8943 14.4834C19.8361 15.1219 20.5573 14.9841 20.5573 14.9841L23.9017 14.9372C23.9017 14.9372 25.6495 14.8322 24.8233 13.4803C24.7549 13.3678 24.3389 12.4781 22.334 10.6472C20.2376 8.73186 20.5217 9.04218 23.0456 5.73093C24.5835 3.71249 25.1988 2.47968 25.0062 1.95468C24.8213 1.44936 23.6918 1.58061 23.6918 1.58061L19.9237 1.60593C19.5568 1.60686 19.2458 1.71749 19.1042 2.08874C19.1013 2.09249 18.5062 3.65061 17.7127 4.9753C16.0362 7.77749 15.367 7.92655 15.0896 7.75124C14.4531 7.3453 14.6139 6.1228 14.6139 5.25374C14.6139 2.5378 15.0299 1.4053 13.7993 1.1128C13.3881 1.0153 13.0876 0.951552 12.039 0.942177C10.6985 0.922489 9.5603 0.942177 8.91511 1.25061C8.4866 1.45968 8.15822 1.91811 8.35756 1.94436C8.60793 1.97718 9.16934 2.09436 9.46978 2.49374C9.85593 3.01124 9.84437 4.17093 9.84437 4.17093C9.84437 4.17093 10.0649 7.36874 9.32437 7.7653C8.81593 8.03718 8.12067 7.48218 6.62519 4.9378C5.86156 3.63655 5.28474 2.19843 5.28474 2.19843C5.28474 2.19843 5.17304 1.93124 4.97082 1.78499C4.73008 1.61155 4.39304 1.55624 4.39304 1.55624L0.816594 1.57874C0.816594 1.57874 0.279261 1.59374 0.0818532 1.82436C-0.0934061 2.02874 0.0674088 2.45061 0.0674088 2.45061C0.0674088 2.45061 2.86867 8.90155 6.04067 12.1509C8.94882 15.1341 12.2537 14.9362 12.2537 14.9362H13.7511C13.7511 14.9362 14.2027 14.8856 14.4339 14.6437C14.6496 14.4187 14.6399 13.9959 14.6399 13.9959C14.6399 13.9959 14.6101 12.0187 15.5403 11.7281Z" fill="white"/>
-            </svg><a class="social-hidden" href="" >Вконтакте</a></li>
-          <li class="social"><svg width="12" height="22" viewBox="0 0 12 22" transform="translate(15, 12)" fill="none" xmlns="http://www.w3.org/2000/svg">
+            </svg>
+            <a class="social-hidden" href="" >Вконтакте</a>
+          </li>
+          <li class="social">
+            <svg width="12" height="22" viewBox="0 0 12 22" transform="translate(15, 12)" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
-            </svg><a class="social-hidden" href="">Фейсбук</a></li>
-          <li class="social"><svg width="21" height="21" viewBox="0 0 21 21"  transform="translate(12, 12)" fill="none" xmlns="http://www.w3.org/2000/svg">
+            </svg>
+            <a class="social-hidden" href="">Фейсбук</a>
+          </li>
+          <li class="social">
+            <svg width="21" height="21" viewBox="0 0 21 21"  transform="translate(12, 12)" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z" fill="white"/>
-            </svg><a class="social-hidden" href="">Инстаграмм</a></li>
+            </svg>
+            <a class="social-hidden" href="">Инстаграмм</a>
+          </li>
         </ul>
         <ul class="footer-copyright no-bulites">
           <li>Обратная связь:<br><a href="">mail@htmlacademy.ru</a></li>
