--- a/Catalog.html
+++ b/Catalog.html
@@ -9,26 +9,31 @@
     <body class="page-body">
       <header class="page-header">
         <div class="main-order-bar">
-          <nav class="main-order">
+          <nav class="main-order-catalog">
             <a class="header-logo" href="index.html">
               <img src="img/Logo-teh.svg" alt="Логотип компании «Техномарт»">
             </a>
-            <ul class="order-navigation no-indentation">
-              <li><a href="">Закладки</a></li>
-              <li><a href="">Корзина</a></li>
-              <li><a href="">Оформить заказ</a></li>
+            <ul class="order-navigation-catalog no-indentation">
+              <li><a href="" class="order-navigation-bookmarks">Закладки: 0</a></li>
+              <li><a href="" class="order-navigation-basket">Корзина: 10</a></li>
+              <li><a href="" class="order-navigation-arrange">Оформить заказ</a></li>
             </ul>
           </nav>
         </div>
         <div class="main-description">
-          <p>Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
+          <div>
+            <p>Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
+          </div>
           <div class="tell-adress">
-            <a href="tel:88125550505">+7(812)555-05-05</a>
+            <a href="tel:88125550505" class="tell">+7(812)555-05-05</a>
             <address>г. Санкт-петербург, ул. Б. Конюшенная, д19/8</address>
           </div>
-          <div class="button-order">
-            <button class="button-sign" type="button">Войти</button>
-            <button class="button-reg" type="button">Регистрация</button>
+          <div class="button-order-private">
+            <a href="" class="button-private" type="button">Равшан Джамшутович</a>
+            <div class="private-nav">
+              <a href="" class="private-nav-button">Мои заказы</a>
+              <a href="" class="private-nav-button">Личный кабинет</a>
+            </div>  
           </div>  
         </div>   
         <nav class="main-navigation">
@@ -44,71 +49,74 @@
         </nav>  
       </header>
       <main class="page-maincatolog">
-        <h1 class="notheading">Перфораторы</h1>
-        <ul class="catalog-navigation no-bulites">
-          <li><a href="Catalog.html">Каталог</a></li>
-          <li><a href="">Интсрумент</a></li>
-          <li><a href="">Перфораторы</a></li>
-        </ul>
-        <div class="catalog-heading">
-          <h2>Перфораторы</h2>
+        <div class="page-maincatolog-nav">
+          <h1 class="notheading">Перфораторы</h1>
+          <ul class="catalog-navigation no-bulites">
+            <li><a href="Catalog.html">Каталог</a></li>
+            <li><a href="">Интсрумент</a></li>
+            <li><a href="">Перфораторы</a></li>
+          </ul>
+          <div class="catalog-heading">
+            <h2>Перфораторы</h2>
+          </div>
         </div>
-        <section class="product-block">
-          <div>
-            <h2>Фильтр</h2>
-            <!--Форма фильтра-->
-          </div>
-          <div>
-            <ul class="products-list-catalog no-bulites">
-              <li class="products-item">
-                <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
-                <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
-                <button type="button">25500</button>
-              </li>
-              <li class="products-item">
-                <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
-                <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
-                <button type="button">25500</button>
-              </li>
-              <li class="products-item">
-                <button type="button">Купить</button>
-                <button type="button">В закладки</button>
-                <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
-                <button type="button">25500</button>
-              </li>
-              <li class="products-item">
-                <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000">
-                <p>Перфоратор BOSCH <br>BFG 3000<br><del>22500 Р.</del></p>
-                <button type="button">15500</button>
-              </li>
-              <li class="products-item">
-                <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
-                <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
-                <button type="button">25500</button>
-              </li>
-              <li class="products-item">
-                <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 2000">
-                <p>Перфоратор BOSCH <br>BFG 6000<br></p>
-                <button type="button">12500</button>
-              </li>
-              <li class="products-item">
-                <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 3000">
-                <p>Перфоратор BOSCH <br>BFG 6000<br><del>22500 Р.</del></p>
-                <button type="button">15500</button>
-              </li>
-              <li class="products-item">
-                <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
-                <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
-                <button type="button">25500</button>
-              </li>
-              <li class="products-item">
-                <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 2000">
-                <p>Перфоратор BOSCH <br>BFG 6000<br></p>
-                <button type="button">12500</button>
-              </li>  
-            </ul>
-          </div>
-          <div class="product-block-nav">
+        <section class="catalog-block">
+          <div class="catalog-block-product">
+            <div>
+              <h2>Фильтр</h2>
+              <!--Форма фильтра-->
+            </div>
+            <div>
+              <ul class="products-list-catalog no-bulites">
+                <li class="products-item">
+                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
+                  <button type="button">25500</button>
+                </li>
+                <li class="products-item">
+                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
+                  <button type="button">25500</button>
+                </li>
+                <li class="products-item">
+                  <button type="button">Купить</button>
+                  <button type="button">В закладки</button>
+                  <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
+                  <button type="button">25500</button>
+                </li>
+                <li class="products-item">
+                  <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000">
+                  <p>Перфоратор BOSCH <br>BFG 3000<br><del>22500 Р.</del></p>
+                  <button type="button">15500</button>
+                </li>
+                <li class="products-item">
+                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
+                  <button type="button">25500</button>
+                </li>
+                <li class="products-item">
+                  <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 2000">
+                  <p>Перфоратор BOSCH <br>BFG 6000<br></p>
+                  <button type="button">12500</button>
+                </li>
+                <li class="products-item">
+                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 3000">
+                  <p>Перфоратор BOSCH <br>BFG 6000<br><del>22500 Р.</del></p>
+                  <button type="button">15500</button>
+                </li>
+                <li class="products-item">
+                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <p>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></p>
+                  <button type="button">25500</button>
+                </li>
+                <li class="products-item">
+                  <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 2000">
+                  <p>Перфоратор BOSCH <br>BFG 6000<br></p>
+                  <button type="button">12500</button>
+                </li>  
+              </ul>
+            </div>  
+            <div class="product-block-nav">
             <ul class="products-list-navigation no-bulites">
               <li><a href="">1</a></li>
               <li><a href="">2</a></li>
@@ -128,8 +136,9 @@
         <div class="footer-navigation-bar">
           <div class="footer-navigation" >
             <div class="footer-navigation-menu">
-              <img src="img/logotip.png" alt="Логотип компании «Техномарт»">
-              <h2>Техномарт</h2>
+              <a href="" class="footer-navigation-logo"> 
+                <img src="img/Logo-teh.svg"  alt="Логотип компании «Техномарт»">
+              </a>
               <ul class="footer-nav no-bulites">
                 <li><a href="">Компания</a></li>
                 <li><a href="">Новости</a></li>
@@ -139,13 +148,18 @@
               </ul>
             </div>
             <div> 
-              <ul class="footer-cat no-bulites">
-                <li><address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address><a href="tel:88125550555">+7 (812) 555-05-55</a></li>
-                <li><a href="">Материалы</a></li>
-                <li><a href="">Техника</a></li>
-                <li><a href="">Инструмент</a></li>
-                <li><a href="">Спецпредложения</a></li>
-              </ul>
+              <div class="footer-cat no-bulites">
+                <div class="footer-cat-adddres">
+                  <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+                  <a href="tel:88125550555">+7 (812) 555-05-55</a></li>
+                </div>
+                <ul class="footer-cat-nav no-bulites">
+                  <li><a href="">Материалы</a></li>
+                  <li><a href="">Техника</a></li>
+                  <li><a href="">Инструмент</a></li>
+                  <li><a href="">Спецпредложения</a></li>
+                </ul>
+              </div>
             </div>  
           </div>
         </div>
