--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h2 class="notheading">Товары</h2>
         <div class="products-block">
           <h3>Популярные товары:</h3>
-          <a class="products-block-nav" href="">
+          <a class="products-block-nav button-state" href="">
             Все популярные товары
           </a>
         </div>
@@ -114,7 +114,7 @@
             </figure>
             <span>Перфоратор BOSCH<br>BFG 9000</span>
             <span><del>32500 Р.</del></span>
-            <a class="button-products" href="">25&nbsp;500&nbsp;</a>
+            <a class="button-products" href="">25&nbsp;500&nbsp;р.</a>
           </li>
           <li class="products-item">
             <div class="products-item-flag"></div>
@@ -127,7 +127,7 @@
             </figure>
             <span>Перфоратор BOSCH <br>BFG 3000</span>
             <span><del>22500 Р.</del></span>
-            <a class="button-products" href="">15500</a>
+            <a class="button-products" href="">15&nbsp;500&nbsp;р.</a>
           </li> 
           <li class="products-item">
             <div class="products-item-bay">
@@ -139,7 +139,7 @@
             </figure>
             <span>Перфоратор BOSCH <br>BFG 6000</span>
             <span><del>30500 Р.</del></span>
-            <a class="button-products" href="">25500</a>
+            <a class="button-products" href="">25&nbsp;500&nbsp;р.</a>
           </li>
           <li class="products-item">
             <div class="products-item-flag"></div>
@@ -152,7 +152,7 @@
             </figure>
             <span>Перфоратор BOSCH <br>BFG 2000</span>
             <span class="notheading">1</span>
-            <a class="button-products" href="">12500</a>
+            <a class="button-products" href="">12&nbsp;500&nbsp;р.</a>
           </li>  
         </div>
       </section>
@@ -160,14 +160,14 @@
         <h2 class="notheading">Производители</h2>
         <div class="manufactures-block">
           <h2>Популярные производители:</h2>
-          <a class="manufactures-block-nav" href="">
+          <a class="manufactures-block-nav button-state" href="">
             Все производители
           </a>
         </div>
         <ul class="manufactures-list no-bulites">
           <li>
             <a href="">
-              <img class="manufactures-list-logo" src="img/logo-bosch.jpg" alt="Логотип партнера Bosch">
+              <img class="manufactures-list-logo" src="img/logo-bosch.jpg" width="123" height="40" alt="Логотип партнера Bosch">
             </a>
           </li>
           <li>
