:heavy_check_mark: Сборка #14

--- a/14/index.html
+++ b/14/index.html
@@ -168,7 +168,7 @@
         <ul class="manufactures-list no-bulites">
           <li>
             <a href="">
-              <img class="manufactures-list-logo" src="img/logo-bosch.jpg" width="123" height="40" alt="Логотип партнера Bosch">
+              <img class="manufactures-list-logo" src="img/logo-bosch.jpg"   alt="Логотип партнера Bosch">
             </a>
           </li>
           <li>
@@ -328,7 +328,7 @@
             <ul class="footer-social no-bulites">
               <li class="social-vk social">
                 <a href="">
-                  <span class="social-hidden">Вконтакте</span> 
+                  <span class="social-hidden">Вконтакте</span>  
                 </a> 
               </li>
               <li class="social-face social">
