:heavy_check_mark: Сборка #15

--- a/15/Catalog.html
+++ b/15/Catalog.html
@@ -16,7 +16,7 @@
             </a>
             <form class="main-order-search" action="https://echo.htmlacademy.ru" method="post">
               <input id="search-field" type="search" name="search" placeholder="Поиск:">
-              <label for="search-field"></label>
+              <label aria-label="search" for="search-field"></label>
             </form>
             <ul class="order-navigation no-indentation">
               <li><a class="order-navigation-inbookmarks" href="">Закладки: 0</a></li>
@@ -83,9 +83,9 @@
                   <li><a href="">По типу</a></li>
                   <li><a href="">По функционалу</a></li>
                 </ul>
-                <ul class="catolog-sorting-button no-bulites">
-                  <li><a href="" class="catalog-sorting-up active"></a></li>
-                  <li><a href="" class="catalog-sorting-down"></a></li>
+                <ul class="catalog-corting-nav no-bulites">
+                  <li><a href="" class="catolog-sorting-button catalog-sorting-up active"></a></li>
+                  <li><a href="" class="catolog-sorting-button catalog-sorting-down"></a></li>
                 </ul>
               </div>
             </div>
@@ -319,17 +319,17 @@
               <ul class="footer-social no-bulites">
                 <li class="social-vk social">
                   <a href="">
-                    <span class="social-hidden">Вконтакте</span> 
+                    <span class="visually-hidden">Вконтакте</span> 
                   </a> 
                 </li>
                 <li class="social-face social">
                   <a href="">
-                    <span class="social-hidden">Фейсбук</span>
+                    <span class="visually-hidden">Фейсбук</span>
                   </a>
                 </li>
                 <li class="social-inst social">
                   <a href="">
-                    <span class="social-hidden">Инстаграмм</span>
+                    <span class="visually-hidden">Инстаграмм</span>
                   </a>
                 </li>
               </ul>
