--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="page-header">
       <div class="main-order-bar">
         <nav class="main-order">
-          <a class="header-logo" href="index.html">
-            <img src="img/Logo-teh.svg" width="108" height="18" alt="Логотип компании «Техномарт»">
+          <a class="header-logo" href="">
+            <img src="img/logo-teh.svg" width="108" height="18" alt="Логотип компании «Техномарт»">
           </a>
           <form class="main-order-search" action="https://echo.htmlacademy.ru" method="post">
             <input id="search-field" type="search" name="search" placeholder="Поиск:">
@@ -37,9 +37,9 @@
       </div>   
       <nav class="main-navigation">
         <ul class="site-navigation no-bulites">
-          <li><a href="#">Главная</a></li>
+          <li><a href="#" tabindex="-1">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="Catalog.html">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -79,15 +79,15 @@
                 <a class="slide-button-next active" href="#"></a>
                 <a class="slide-button-back" href="#"></a>
               </div>
-              <img src="img/Perfocart.jpg" width="983" height="430" alt="Перфораторы"> <!--Слайдер-->
+              <img src="img/perfocart.jpg" width="983" height="430" alt="Перфораторы"> <!--Слайдер-->
               <h2>Перфораторы</h2>
               <p>Настоящие мужские игрушки</p>
-              <a class="perfocart-slide-nav" href="Catalog.html">Открыть каталог</a>
+              <a class="perfocart-slide-nav" href="catalog.html">Открыть каталог</a>
             </div>
           </li>
           <li class="categories-slider">
             <div class="perfocart-slide-next">
-              <img src="img/Perfocart2.jpg" width="983" height="430" alt="Перфораторы"> <!--Слайдер-->
+              <img src="img/perfocart2.jpg" width="983" height="430" alt="Перфораторы"> <!--Слайдер-->
               <h2>Перфораторы</h2>
               <p>Настоящие мужские игрушки</p>
               <a class="perfocart-slide-nav" href="#">Открыть каталог</a>
@@ -110,14 +110,13 @@
               <button type="button" class="buuton-bookmarks">В Закладки</button>
             </div>
             <figure class="products-item-image">
-              <img src="img/Bfg-9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img/bfg-9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
             </figure>
             <span>Перфоратор BOSCH<br>BFG 9000</span>
             <span><del>32500 Р.</del></span>
             <a class="button-products" href="#">25&nbsp;500&nbsp;р.</a>
           </li>
-          <li class="products-item">
-            <div class="products-item-flag"></div>
+          <li class="products-item label-new">          
             <div class="products-item-bay">
               <button type="button" class="buuton-bay">Купить</button>
               <button type="button" class="buuton-bookmarks">В Закладки</button>
@@ -141,7 +140,7 @@
             <span><del>30500 Р.</del></span>
             <a class="button-products" href="#">25&nbsp;500&nbsp;р.</a>
           </li>
-          <li class="products-item">
+          <li class="products-item label-new">
             <div class="products-item-flag"></div>
             <div class="products-item-bay">
               <button type="button" class="buuton-bay">Купить</button>
@@ -209,7 +208,7 @@
       </section>
       <section class="service">
         <h2>Сервисы</h2>
-        <p>Хороший интернет магазин отличаеться от плохого нне только ценами!<br>Мы стараемся изо всех сил, что бы сделать ваши покупки приятными.</p>
+        <p>Хороший интернет магазин отличаеться от плохого не только ценами!<br>Мы стараемся изо всех сил, что бы сделать ваши покупки приятными.</p>
         <div class="service-slide">
           <ul class="service-list no-bulites">
             <li>
@@ -263,8 +262,8 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
           <div>
-            <a class="modalMapOpen" href="">
-              <img src="img/Karta.jpg" width="300" height="158" alt="Карта как нас найти">
+            <a class="modalmapopen" href="https://goo.gl/maps/1TZFQFuFfTY3TenS6">
+              <img src="img/map.jpg" width="300" height="158" alt="Карта как нас найти">
             </a>
           </div>
           <a class="details-list-lost" href="#">Заблудились? Напишите нам!</a>
@@ -276,7 +275,7 @@
         <div class="footer-navigation" >
           <div class="footer-navigation-menu">
             <a href="#" class="footer-navigation-logo"> 
-              <img src="img/Logo-teh.svg" width="138" height="23" alt="Логотип компании «Техномарт»">
+              <img src="img/logo-teh.svg" width="138" height="23" alt="Логотип компании «Техномарт»">
             </a>
             <ul class="footer-nav no-bulites">
               <li><a href="#">Компания</a></li>
@@ -330,26 +329,26 @@
           <div>  
             <ul class="footer-copyright no-bulites">
               <li>Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></li>
-              <li>Разработано - <br><a href="#">htmlacademy.ru</a></li>
+              <li>Разработано - <br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></li>
             </ul>
           </div>
         </div> 
       </div>
     </footer>
-    <div id="openModalMap" class="modalMap">
-      <a class="modalMap-close" href="#"></a>
+    <div id="openmodalmap" class="modalmap">
+      <a class="modalmap-close" href="#"></a>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="940" height="449" allowfullscreen title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
     </div> 
-    <div id="openModalLost" class="modalLost" >
-      <a class="modalLost-close" href="#"></a>
+    <div id="openmodalLost" class="modallost" >
+      <a class="modallost-close" href="#"></a>
       <form class="form-action" action="https://echo.htmlacademy.ru" method="post">
         <label class="signature-form" for=your-name>Ваше имя:</label>
         <input class="name-form" type="text" id="your-name" name="your-name" placeholder="Имя Фамилия">
         <label class="youremail-form" for=your-email>Ваш e-mail:</label>
         <input class="email-form" type="text" id="your-email" name="your-email" placeholder="email@example.com">
         <label class="letter-text" for="letter-field">Текст письма:</label>
-        <textarea class="letter-form" id="letter-field" name="letter-field">В свободной форме</textarea>
-        <button class="modalLost-send" type="submit">Отправить</button>
+        <textarea class="letter-form" id="letter-field" name="letter-field" placeholder="В свободной форме"></textarea>
+        <button class="modallost-send" type="submit">Отправить</button>
       </form>
     </div>
     <script src="js/script.js"></script>
