--- a/Catalog.html
+++ b/Catalog.html
@@ -36,7 +36,7 @@
             <div class="button-link">
               <a href="#" class="button-private">Равшан Джамшутович</a>
               <a class="button-private-exit" href="#">
-                <span class="visually-hidden">Войти</span>
+                <span class="visually-hidden">Выйти</span>
               </a>
             </div> 
             <div class="private-nav">
@@ -85,8 +85,16 @@
                   <li><a href="#">По функционалу</a></li>
                 </ul>
                 <ul class="catalog-corting-nav no-bulites">
-                  <li><a href="#" class="catolog-sorting-button catalog-sorting-up active"></a></li>
-                  <li><a href="#" class="catolog-sorting-button catalog-sorting-down"></a></li>
+                  <li>
+                    <a href="#" class="catolog-sorting-button catalog-sorting-up active">
+                      <span class="visually-hidden">По возрастанию</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="catolog-sorting-button catalog-sorting-down ">
+                      <span class="visually-hidden">по убыванию</span>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -176,7 +184,7 @@
                 <figure class="products-item-image">
                   <img src="img/bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
-                <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
+                <span>Перфоратор BOSCH<br>BFG 6000<br><del>30500 Р.</del></span>
                 <a class="button-products" href="#">23&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item label-new">
@@ -285,6 +293,7 @@
                 <li><a href="#">Каталог</a></li>
                 <li><a href="#">Доставка</a></li>
                 <li><a href="#">Контакты</a></li>
+            
               </ul>
             </div>
             <div> 
@@ -309,7 +318,6 @@
               <h2>Связь с нами</h2>  <!--Будет переименновано-->
               <p>© 2010-2019 Компания «Техномарт» <br>Все права защищены</p>
             </div>
-            <div>  
               <ul class="footer-social no-bulites">
                 <li class="social-vk social">
                   <a href="#">
@@ -327,7 +335,6 @@
                   </a>
                 </li>
               </ul>
-            </div>   
             <div>  
               <ul class="footer-copyright no-bulites">
                 <li>Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></li>
@@ -345,7 +352,6 @@
         </div>
         <a class="modallost-close"></a>
       </div> 
-      <script src="js/script.js"></script>
     </body>
   </html>
   
