--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>HTML Academy: Техномарт</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page-body">
     <header class="page-header">
@@ -28,7 +29,7 @@
         <p>Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
         <div class="tell-adress">
           <a href="tel:88125550505" class="tell">+7 (812) 555-05-55</a>
-          <address>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</address>
+          <address>г. Санкт-петербург, ул. Б. Конюшенная, д19/8</address>
         </div>
         <div class="button-order">
           <a href="#" class="button-sign">Войти</a>
@@ -236,8 +237,7 @@
               гарантии. Мы обменяем сгоревший товар на новый.
               <br>Дом уж востановите как-нибудь сами.
             </span>
-          </div>
-          <div class="service-slide-credit">
+          </div>          <div class="service-slide-credit">
             <h3>Кредит</h3>
             <span>Залезть в долговую яму стало проще!
               <br> Кредитные консультанты придут вам на помощь
@@ -288,7 +288,7 @@
           <div> 
             <div class="footer-cat no-bulites">
               <div class="footer-cat-addres">
-                <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+                <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 </address>
                 <a href="tel:88125550555">+7 (812) 555-05-55</a>
               </div>
               <ul class="footer-cat-nav no-bulites">
@@ -296,6 +296,7 @@
                 <li><a href="#">Техника</a></li>
                 <li><a href="#">Инструмент</a></li>
                 <li><a href="#">Спецпредложения</a></li>
+              
               </ul>
             </div>
           </div>  
@@ -324,6 +325,7 @@
                   <span class="visually-hidden">Инстаграмм</span>
                 </a>
               </li>
+              
             </ul>
           </div>   
           <div>  
@@ -351,6 +353,6 @@
         <button class="modallost-send" type="submit">Отправить</button>
       </form>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
